[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensense-ai"
version = "0.2.0"
description = "LLM cost observability and smart routing — stays in your code, works everywhere."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sahil Selokar", email = "visualvortexcreatives@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Optional dependencies can be listed or we can make them standard if wrapping.
    # We will support wrapping openai, anthropic, groq.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.10.0"]
groq = ["groq>=0.4.0"]
otel = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp"
]
cache = [
    "sqlite-vec",
    "numpy"
]
langchain = ["langchain-core"]
llamaindex = ["llama-index-core"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tokensense*"]

[project.scripts]
tokensense = "tokensense.cli:main"
